--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="mid2-head">Blog</div>
                 <div class="sections">
                     <div class="mid2_image">
-                        <img src="css/blog.png" class="blogimg">
+                        <img src="CSS/blog.png" class="blogimg">
                     </div>
                     <div class="mid2_info">Ken the ins and outs of life and moil at IMG.
                         Find answers to all your whats, whys and hows.</div>
