complete blog page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>IMG channel-i</title>
         <link rel="stylesheet" href="CSS/styles.css">
-        <link rel="icon" href="">
+        <link rel="icon" href="CSS/favicon.ico">
     </head>
     <body>
         <div class="container">
@@ -81,7 +81,7 @@
                 <div class="mid_button btn">View More</div>
             </div>
             <div class="mid_2">
-                <div class="mid2-head">Blog</div>
+                <div class="mid2-head"><a href="blog.html"> Blog</a></div>
                 <div class="sections">
                     <div class="mid2_image">
                         <img src="CSS/blog.png" class="blogimg">
