main page fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>IMG channel-i</title>
         <link rel="stylesheet" href="CSS/styles.css">
         <link rel="icon" href="CSS/favicon.ico">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@typopro/web-bebas-neue@3.7.5/TypoPRO-BebasNeue.min.css">
     </head>
     <body>
         <div class="container">
@@ -83,22 +86,29 @@
             <div class="mid_2">
                 <div class="mid2-head"><a href="blog.html"> Blog</a></div>
                 <div class="sections">
-                    <div class="mid2_image">
+                    <div class="mid2_image column">
                         <img src="CSS/blog.png" class="blogimg">
                     </div>
-                    <div class="mid2_info">Ken the ins and outs of life and moil at IMG.
+                    <div class="mid2_info column">Ken the ins and outs of life and moil at IMG.<br>
                         Find answers to all your whats, whys and hows.</div>
                 </div>
                 <div class="mid_2_btn btn">Read More</div> 
             </div>
             <div class="abt_info">
-                <div class="contUs">
+                <div class="contUs column1">
                     <h2 >Contact Us</h2>
-                    <div class="address"></div>
-                    <div class="cont_details"></div>
+                    <div class="address">
+                        1st floor, ICC, IIT Roorkee<br>
+                        Roorkee,<br>
+                        Uttarakhand, India - 247667<br><br>
+                    </div>
+                    <div class="cont_details">
+                        01332-284-521<br>
+                        img@iitr.ac.in
+                    </div>
                     <div class="soc_media"></div>
                 </div>
-                <div class="about">
+                <div class="about column1">
                     <h2>About</h2>
                     <div class="abtInfo">As the institute evolves, so does IMG. We are a student group, which cultivates technical innovation and drives the development of software systems and niche applications which empathize with the residents of IIT Roorkee, making their digital stay as seamless as possible. We survive on action and results, getting it done faster, better and more efficiently, with one goal in mind: Simplifying the business of college life.</div>
                 </div>
