--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@typopro/web-bebas-neue@3.7.5/TypoPRO-BebasNeue.min.css">
+        <script
+      src="https://kit.fontawesome.com/0a964c491f.js"
+      crossorigin="anonymous"
+    ></script>
     </head>
     <body>
         <div class="container">
             <div class="nav-head">
                 <div class="icon"></div>
                 <div class="nav_buttons">
+                    <div class="burger"></div>
+                    <div class="burger"></div>
+                    <div class="burger"></div>
                     <div class="options">Blog</div>
                     <div class="options">Projects</div>
                     <div class="options">Team</div>
@@ -103,10 +110,17 @@
                         Uttarakhand, India - 247667<br><br>
                     </div>
                     <div class="cont_details">
+                        <i class="fas fa-phone"></i>
                         01332-284-521<br>
+                        <i class="fas fa-envelope"></i>
                         img@iitr.ac.in
                     </div>
-                    <div class="soc_media"></div>
+                    <div class="soc_media">
+                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="#"><i class="fab fa-medium"></i></a>
+                        <a href="#"><i class="fab fa-facebook-square"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
                 </div>
                 <div class="about column1">
                     <h2>About</h2>
