home page complete1

--- a/blog.html
+++ b/blog.html
@@ -8,10 +8,14 @@
         <link rel="icon" href="CSS/favicon.ico">
     </head>
     <body>
-        <div class="container">
+    <div class="maincontainer">
+        <div class="container" id="id1">
             <div class="nav-head">
                 <div class="icon"></div>
                 <div class="nav_buttons">
+                    <div class="burger"></div>
+                    <div class="burger"></div>
+                    <div class="burger"></div>
                     <div class="options">Blog</div>
                     <div class="options">Projects</div>
                     <div class="options">Team</div>
@@ -68,12 +72,16 @@
                     </div>
                 </div>
             </div>
-            <div class="unksym"></div>
-            <footer class="footer">
-                © 2021 Information Management Group
-            </footer>
         </div>
-
+        <div class="container2">
+            <div class="bottom">
+                <div class="unksym"></div>
+                <footer class="footer">
+                    © 2021 Information Management Group
+                </footer>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
 
