--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         <link rel="icon" href="CSS/favicon.ico">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@typopro/web-bebas-neue@3.7.5/TypoPRO-BebasNeue.min.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
         <script
       src="https://kit.fontawesome.com/0a964c491f.js"
       crossorigin="anonymous"
@@ -37,7 +40,7 @@
                         <div class="a1 a2"></div>
                     </div>
                     <div class="para text">The group flaunts a wide spectrum of projects,
-                         influencing over eight thousand lives on campus.</div>
+                        <br> influencing over eight thousand lives on campus.</div>
                 </div>
                 <div class="right-fr">
                     <div class="extra">
@@ -91,7 +94,7 @@
                 <div class="mid_button btn">View More</div>
             </div>
             <div class="mid_2">
-                <div class="mid2-head"><a href="blog.html"> Blog</a></div>
+                <div class="mid2-head"> Blog</div>
                 <div class="sections">
                     <div class="mid2_image column">
                         <img src="CSS/blog.png" class="blogimg">
@@ -107,7 +110,7 @@
                     <div class="address">
                         1st floor, ICC, IIT Roorkee<br>
                         Roorkee,<br>
-                        Uttarakhand, India - 247667<br><br>
+                        Uttarakhand, India - 247667<br>
                     </div>
                     <div class="cont_details">
                         <i class="fas fa-phone"></i>
