blog page complete1

--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,13 @@
         <title>IMG channel-i Blog</title>
         <link rel="stylesheet" href="CSS/blog.css">
         <link rel="icon" href="CSS/favicon.ico">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/0a964c491f.js" crossorigin="anonymous"></script>
     </head>
     <body>
     <div class="maincontainer">
@@ -75,9 +82,9 @@
         </div>
         <div class="container2">
             <div class="bottom">
-                <div class="unksym"></div>
-                <footer class="footer">
-                    © 2021 Information Management Group
+                <div class="unksym"><a href="#"><i class="fab fa-medium"></i></a></div>
+                <footer class="footer"><div class="xxx">
+                    © 2021 Information Management Group</div>
                 </footer>
             </div>
         </div>
