--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-        <script
-      src="https://kit.fontawesome.com/0a964c491f.js"
-      crossorigin="anonymous"
-    ></script>
+        <script src="https://kit.fontawesome.com/0a964c491f.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="container">
@@ -102,7 +99,7 @@
                     <div class="mid2_info column">Ken the ins and outs of life and moil at IMG.<br>
                         Find answers to all your whats, whys and hows.</div>
                 </div>
-                <div class="mid_2_btn btn">Read More</div> 
+                <div class="mid_2_btn btn"><a href="blog.html">Read More</a> </div> 
             </div>
             <div class="abt_info">
                 <div class="contUs column1">
