--- a/index_font.html
+++ b/index_font.html
@@ -47,7 +47,9 @@
             </div>
             <div class="middle">
                 <div class="headmid">Projects</div>
-                <div class="image"></div>
+                <div class="image">
+                    <img src="CSS/project.png" class="proimg">
+                </div>
                 <div class="projects">
                     <a href="#">
                         <div class="sec1 pro">
