--- a/index_font.html
+++ b/index_font.html
@@ -37,7 +37,7 @@
                         <div class="a1 a2"></div>
                     </div>
                     <div class="para text">The group flaunts a wide spectrum of projects,
-                        <br> influencing over eight thousand lives on campus.</div>
+                         influencing over eight thousand lives on campus.</div>
                 </div>
                 <div class="right-fr">
                     <div class="extra">
