footer position home

--- a/index_font.html
+++ b/index_font.html
@@ -92,6 +92,7 @@
                 </div>
                 <div class="mid_button btn">View More</div>
             </div>
+            <div class="correct">
             <div class="mid_2">
                 <div class="mid2-head"> Blog</div>
                 <div class="sections">
@@ -132,6 +133,7 @@
             <footer class="footer">
                 © 2021 Information Management Group
             </footer>
+        </div>
         </div>
 
     </body>
